fix some whitespace stuff

--- a/themes/default/theme/src/scss/docs/_pulumi-quickstart.scss
+++ b/themes/default/theme/src/scss/docs/_pulumi-quickstart.scss
@@ -241,6 +241,10 @@
                         display: flex;
                         flex-direction: column;
                     }
+
+                    p:last-of-type {
+                        margin-bottom: 0;
+                    }
                 }
         
 
